--- a/stock-easy-app/package.json
+++ b/stock-easy-app/package.json
@@ -12,11 +12,15 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "firebase": "^12.4.0",
     "framer-motion": "^11.0.0",
+    "i18next": "^25.6.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.1.0",
+    "react-router-dom": "^7.9.4",
     "sonner": "^1.4.0"
   },
   "devDependencies": {
@@ -25,6 +29,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.16",
     "jsdom": "^27.0.0",
     "postcss": "^8.4.32",
