--- a/stock-easy-app/package.json
+++ b/stock-easy-app/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^16.1.0",
+    "react-mentions": "^4.4.10",
     "react-router-dom": "^7.9.4",
     "sonner": "^1.4.0"
   },
