--- a/stock-easy-app/package.json
+++ b/stock-easy-app/package.json
@@ -22,6 +22,7 @@
     "react-i18next": "^16.1.0",
     "react-mentions": "^4.4.10",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.3.0",
     "sonner": "^1.4.0"
   },
   "devDependencies": {
