--- a/stock-easy-app/package.json
+++ b/stock-easy-app/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-vis": "^1.5.1",
+    "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
     "framer-motion": "^11.0.0",
     "i18next": "^25.6.0",
