--- a/stock-easy-app/.env.example
+++ b/stock-easy-app/.env.example
@@ -1,1 +1,47 @@
-VITE_API_URL=https://script.google.com/macros/s/VOTRE_ID_ICI/exec
+# 🔐 VARIABLES D'ENVIRONNEMENT - STOCK EASY APP
+#
+# ⚠️ NE JAMAIS COMMITER LE FICHIER .env RÉEL
+# Ce fichier .env.example sert de template
+#
+# Instructions:
+# 1. Copiez ce fichier en .env: cp .env.example .env
+# 2. Remplacez les valeurs par vos vraies credentials
+# 3. Ne commitez JAMAIS le fichier .env
+
+# ==============================================
+# API GOOGLE APPS SCRIPT
+# ==============================================
+
+# URL de votre API Google Apps Script
+# Format: https://script.google.com/macros/s/VOTRE_ID_ICI/exec
+VITE_API_URL=
+
+# ==============================================
+# FIREBASE CONFIGURATION
+# ==============================================
+
+# Obtenez ces valeurs depuis: https://console.firebase.google.com/project/_/settings/general
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
+VITE_FIREBASE_MEASUREMENT_ID=
+
+# ==============================================
+# ENVIRONNEMENT
+# ==============================================
+
+# Mode: development | production
+NODE_ENV=development
+
+# ==============================================
+# CONFIGURATION OPTIONNELLE
+# ==============================================
+
+# Activer les logs détaillés (true/false)
+VITE_DEBUG_MODE=false
+
+# Timeout des requêtes API (en ms)
+VITE_API_TIMEOUT=30000
