--- a/stock-easy-app/package.json
+++ b/stock-easy-app/package.json
@@ -12,7 +12,9 @@
     "test:coverage": "vitest --coverage",
     "test:forecast": "vitest src/services/forecast/__tests__/SmartForecastEngine.test.js",
     "test:forecast:quick": "node scripts/test-forecast-quick.js",
-    "test:supabase": "node test-supabase-connection.js"
+    "test:supabase": "node test-supabase-connection.js",
+    "test:handlers": "vitest src/handlers/__tests__ --run",
+    "test:handlers:watch": "vitest src/handlers/__tests__"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.81.1",
