--- a/stock-easy-app/package.json
+++ b/stock-easy-app/package.json
@@ -29,6 +29,7 @@
     "react-mentions": "^4.4.10",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
+    "sharp": "^0.34.5",
     "sonner": "^1.4.0"
   },
   "devDependencies": {
