--- a/stock-easy-app/package.json
+++ b/stock-easy-app/package.json
@@ -29,7 +29,6 @@
     "react-mentions": "^4.4.10",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
-    "sharp": "^0.34.5",
     "sonner": "^1.4.0"
   },
   "devDependencies": {
@@ -45,5 +44,8 @@
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.8",
     "vitest": "^3.2.4"
+  },
+  "optionalDependencies": {
+    "sharp": "^0.34.5"
   }
 }
