--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
-  "rootDirectory": "stock-easy-app"
+  "rootDirectory": "stock-easy-app",
+  "buildCommand": "npm run build",
+  "installCommand": "npm install --legacy-peer-deps || npm install",
+  "outputDirectory": "dist",
+  "framework": "vite"
 }
 
