--- a/stock-easy-app/package.json
+++ b/stock-easy-app/package.json
@@ -15,6 +15,7 @@
     "test:supabase": "node test-supabase-connection.js"
   },
   "dependencies": {
+    "@sentry/react": "^10.27.0",
     "@supabase/supabase-js": "^2.81.1",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-vis": "^1.5.1",
