--- a/stock-easy-app/package.json
+++ b/stock-easy-app/package.json
@@ -12,7 +12,18 @@
     "test:coverage": "vitest --coverage",
     "test:forecast": "vitest src/services/forecast/__tests__/SmartForecastEngine.test.js",
     "test:forecast:quick": "node scripts/test-forecast-quick.js",
-    "test:supabase": "node test-supabase-connection.js"
+    "test:supabase": "node test-supabase-connection.js",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:chromium": "playwright test --project=chromium",
+    "test:e2e:firefox": "playwright test --project=firefox",
+    "test:e2e:webkit": "playwright test --project=webkit",
+    "test:e2e:mobile": "playwright test --project=mobile-chrome --project=mobile-safari",
+    "test:e2e:report": "playwright show-report",
+    "test:e2e:update-snapshots": "playwright test --update-snapshots",
+    "test:all": "npm run test && npm run test:e2e"
   },
   "dependencies": {
     "@sentry/react": "^10.27.0",
@@ -33,6 +44,7 @@
     "sonner": "^1.4.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/react": "^18.2.43",
