feat: ajout système d'onboarding et suppression des composants cookies
- Ajout du système d'onboarding avec tour guidé
- Suppression des composants et contexte liés aux cookies
- Mise à jour des traductions
- Ajout de la migration pour le statut d'onboarding

--- a/stock-easy-app/package.json
+++ b/stock-easy-app/package.json
@@ -33,6 +33,7 @@
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-vis": "^1.5.1",
     "date-fns": "^4.1.0",
+    "driver.js": "^1.4.0",
     "framer-motion": "^11.0.0",
     "i18next": "^25.6.0",
     "lodash.debounce": "^4.0.8",
